# lilbits

./: Cargo.toml  README.md
src/: lib.rs  lilbitset.rs  tests.rs
