[package]
name = "lilbits"
version = "0.1.0"
authors = ["sirkibsirkib <christopher.esterhuyse@gmail.com>"]
description = "Super fast u8 set (ie bitmap) relying on the assumption that elements are <= 63"
repository = "https://github.com/sirkibsirkib/trailing_cell"
readme = "README.md"
keywords = ["bitmap", "set", "fast", "bounded"]
license-file = "LICENSE.md"

[dependencies]
serde = "1.0.27"
serde_derive = "1.0.27"